--- a/index.ipynb
+++ b/index.ipynb
@@ -180,9 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'is', 'a', 'list'] {'this-is': 'a-dictionary'} this is a string and third argument\n"
+     ]
+    }
+   ],
    "source": [
     "print([\"this\", \"is\", \"a\", \"list\"], {\"this-is\": 'a-dictionary'}, \"this is a string and third argument\")"
    ]
